--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<title>While you be my valentines?</title>
+<link rel ="stylesheet" type="text/css"
+href = "style.css">
+
 <body>
+    <div class="heart"></div>
+    <h1> Will you be my valentines?</h1>
+
     
 </body>
 </html>
