--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<title>While you be my valentines?</title>
-<link rel ="stylesheet" type="text/css"
-href = "style.css">
+div class="container">  
+<div class="valentines">
+  <div class="envelope"></div>
+  <div class="front"></div>
+  <div class="card"></div>
+  <div class="text">Happy</br> Valentine's</br> Day!</div>
+  <div class="heart"></div>
+  </div>
+  <div class="hearts">
+    <div class="one"></div>
+    <div class="two"></div>
+    <div class="three"></div>
+    <div class="four"></div>
+    <div class="five"></div>
+  </div>
+</div>
+</div>
+<div class="shadow"></div>
+</div>
 
-<body>
-    <div class="heart"></div>
-    <h1> Will you be my valentines?</h1>
-
-    
-</body>
-</html>
