--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-div class="container">  
+<div class="container">  
 <div class="valentines">
   <div class="envelope"></div>
   <div class="front"></div>
   <div class="card"></div>
-  <div class="text">Happy</br> Valentine's</br> Day!</div>
+  <div class="text">Will</br> You be my </br> Valentines?</div>
   <div class="heart"></div>
   </div>
   <div class="hearts">
