--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
 <div class="container">  
-<div class="valentines">
-  <div class="envelope"></div>
-  <div class="front"></div>
-  <div class="card"></div>
-  <div class="text">Will</br> You be my </br> Valentines?</div>
-  <div class="heart"></div>
-  </div>
-  <div class="hearts">
-    <div class="one"></div>
-    <div class="two"></div>
-    <div class="three"></div>
-    <div class="four"></div>
-    <div class="five"></div>
-  </div>
-</div>
-</div>
-<div class="shadow"></div>
-</div>
-
+    <div class="valentines">
+      <div class="envelope"></div>
+      <div class="front"></div>
+      <div class="card">
+      <div class="text">Will</br> You be my</br> Valentines?</div>
+      <div class="heart"></div>
+      </div>
+      <div class="hearts">
+        <div class="one"></div>
+        <div class="two"></div>
+        <div class="three"></div>
+        <div class="four"></div>
+        <div class="five"></div>
+      </div>
+    </div>
+    </div>
+    <div class="shadow"></div>
+    </div>
