--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
+
+
 <div class="container">  
     <div class="valentines">
       <div class="envelope"></div>
       <div class="front"></div>
       <div class="card">
-      <div class="text">Will</br> You be my</br> Valentines?</div>
-      <div class="heart"></div>
+      <div class="text">Will</br> You be my</br> Valentine?</div>
+      <div class="heart"</div>
       </div>
       <div class="hearts">
         <div class="one"></div>
@@ -17,3 +19,5 @@
     </div>
     <div class="shadow"></div>
     </div>
+    
+    
