--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="./js/main.js"></script>
+    <link rel="stylesheet" href="style.css">
+</head>
 <div class="container">  
     <div class="valentines">
       <div class="envelope"></div>
@@ -19,5 +29,5 @@
     </div>
     <div class="shadow"></div>
     </div>
-    
-    
+</body>
+</html>
