--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="envelope"></div>
       <div class="front"></div>
       <div class="card">
-      <div class="text">Will</br> You be my</br> Valentine Aarthi?</div>
+      <div class="text">Will</br> You be my</br> Valentine?</div>
       <div class="heart"</div>
       </div>
       <div class="hearts">
